little help please2

--- a/Project DataTable.ipynb
+++ b/Project DataTable.ipynb
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1979,7 @@
        "[236 rows x 12 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2016,7 +2016,7 @@
     "    try:\n",
     "        date_adjust(row)\n",
     "    except:\n",
-    "        None\n",
+    "        pass\n",
     "IPOdate_df\n"
    ]
   },
