Pushing final updates

--- a/Charts_3_and_4.ipynb
+++ b/Charts_3_and_4.ipynb
@@ -1424,7 +1424,9 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#plt.plot(new_IPOdate_df['Stock #'],new_IPOdate_df['Adj Close'],'ro')\n",
@@ -1611,9 +1613,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pythondata]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-pythondata-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
